--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,10 +3,7 @@
 
 name: Python application
 
-on:
-  [ push ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 permissions:
   contents: read
